# mcp-ibkr-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  README.md  SECURITY.md  pyproject.toml
.claude/: context.md  decisions.md  handoff.md  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/crypto_agent/: __init__.py  config.py  healthcheck.py
src/crypto_agent/adapters/: __init__.py
src/crypto_agent/adapters/ccxt/: __init__.py  broker.py  client.py  market_data.py
src/crypto_agent/server/: __init__.py  app.py  services.py
src/ibkr_agent/: __init__.py  config.py  healthcheck.py  journal.py  keepalive.py
src/ibkr_agent/adapters/: __init__.py
src/ibkr_agent/adapters/cpapi/: __init__.py  auth.py  broker.py  client.py  market_data.py
src/ibkr_agent/domain/: __init__.py  models.py  ports.py
src/ibkr_agent/safety/: __init__.py  market_hours.py  policy.py
src/ibkr_agent/server/: __init__.py  app.py  services.py
src/ibkr_agent/session/: __init__.py  keeper.py
src/trading_core/: __init__.py  capabilities.py  journal.py  reconcile.py
src/trading_core/domain/: __init__.py  models.py  ports.py
src/trading_core/safety/: __init__.py  market_hours.py  policy.py
tests/: test_config.py  test_cpapi_auth.py  test_cpapi_broker.py  test_cpapi_market_data.py  test_crypto.py  test_journal.py  test_keepalive.py  test_market_hours.py  test_order_request.py  test_safety.py  test_server.py  test_session_keeper.py
