[project]
name = "mcp-ibkr-agent"
version = "0.1.0"
description = "Servidor MCP para um agente de IA operar na Interactive Brokers (cotações, posições e ordens inteiras/fracionárias via cashQty)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Pedro Braiti" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "respx>=0.21",
]

[project.scripts]
mcp-ibkr-agent = "ibkr_agent.server.app:main"
ibkr-healthcheck = "ibkr_agent.healthcheck:main"
ibkr-keepalive = "ibkr_agent.keepalive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
