[project]
name = "agentic-trading-mcp"
version = "0.4.0"
description = "Monorepo of MCP execution servers for an AI agent: Interactive Brokers (stocks, fractional via cashQty) and crypto exchanges (CCXT, spot), over one shared safety core."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Pedro Braiti" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
    "holidays>=0.50",
    "ccxt>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "respx>=0.21",
]

[project.scripts]
mcp-ibkr-agent = "ibkr_agent.server.app:main"
ibkr-healthcheck = "ibkr_agent.healthcheck:main"
ibkr-keepalive = "ibkr_agent.keepalive:main"
agentic-trading-crypto = "crypto_agent.server.app:main"
crypto-healthcheck = "crypto_agent.healthcheck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_core", "src/ibkr_agent", "src/crypto_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
